[package]
name = "rust_lambda_example"
version = "0.1.0"
authors = ["James McMurray"]
edition = "2018"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = {version = "0.16.1", features = ["dates"]}
serde = {version = "1.0.104", features = ["derive"]}
chrono = "0.4.11"
csv = "1.1.3"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
rusoto_secretsmanager = "0.42.0"
serde_json = "1.0.48"
postgres = "0.17.2"
postgres-openssl = "0.3.0"
openssl = {version = "0.10.28", features = ["vendored"]}
bytes = "0.5.4"
log = "0.4.8"
simple_logger = "1.6.0"
lambda_runtime = "0.2.1"
aws_lambda_events = "0.2.5"
percent-encoding = "2.1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
